fix vector text spacing

--- a/src/_scss/pages/search/resultsView/_resultsView.scss
+++ b/src/_scss/pages/search/resultsView/_resultsView.scss
@@ -76,6 +76,7 @@
           
           svg {
             fill: $color-white;
+            margin-right: rem(3);
           }
         }
       }
